--- a/indexStyle.css
+++ b/indexStyle.css
@@ -4,21 +4,23 @@
     box-sizing: border-box;
 }
 body{
-    
     background-color: black;
+    background-image: url("images/carbonfiberbluebg.jpg");
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+    background-size: 100%,100%;
     color: white;
     font-family: 'Nunito Sans', sans-serif;
 }
 
-.nav_menu{
+.user-icon{
     width: 40px;
     height: 40px;
-   
-    
+    margin-top: 2px;
 }
 
 .nav_bar{
-    height: 50px;
+    height: 40px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -49,10 +51,9 @@ hr{
     height: 1px;
     background-color: gray;
     border: none;
-    
 }
 .nav_bar ul li a:hover{
-    color:blue;
+    color:grey;
 }
 .drop-down{
     display: none;
@@ -61,32 +62,31 @@ hr{
     display: block;
     position:absolute;
     right: 0;
-    /* top: 100%; */
-  background-color: rgb(73, 73, 73);
+  background-image: url(images/carbonfiber.jpg);
     border: 1px;
-    border-style: solid;
-    border-color:grey;
-    
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 .nav_bar ul li:hover .drop-down ul{
     display: block;
-    margin: 1px;
 }
 .nav_bar ul li:hover .drop-down ul li{
-    width: 70px;
+    width: 95px;
     padding: 8px;
-    
-   
+
 }
 /* sourced */
 .container{
     width: 100%;
-    height: 100vh;
+    height:auto;
     margin-top: 5px;
+   
 }
 .swiper{
-    height: 700px;
+    height: 500px;
     width: 100%;
+     border-bottom: 1px solid gray;
+     border-top: 1px solid gray;
 }
 .swiper-slide img{
     width:100%;
@@ -100,7 +100,7 @@ hr{
 /* sourced */
 
 
-
+/* -------products--------- */
 .row{
     display: flex;
     align-items: center;
@@ -170,7 +170,7 @@ a:hover{
     background: rgba(0, 0, 0, 0.2); 
      width: 100%;
      opacity:0; 
-     transition: .7s ease;
+     transition: .8s ease;
  
 }
 .col-1:hover .overlayimg{
@@ -187,6 +187,40 @@ a:hover{
     margin-bottom: 50px;
   
 }
+
+/* ------footer -----------*/
+footer{
+    background:black ;
+    color: white;
+    font-size: 14px;
+    padding: 30px 0 20px;
+}
+.footer h3{
+    margin-bottom:20px ;
+}
+.footer-col-1, .footer-col-2,.footer-col-3,.footer-col-4{
+    min-width: 250px;
+    margin-bottom: 20PX;
+}
+
+ul{
+    list-style-type: none;
+}
+footer ul li{
+    color: #b5b5b5;
+    margin: 5px;
+}
+footer hr{
+    border: none;
+    background-color: #b5b5b5;
+    height: 1px;
+    margin: 20px 0;
+
+}
+.copyright{
+    text-align: center;
+}
+
 
 
 
