--- a/Login and Registration/style1.css
+++ b/Login and Registration/style1.css
@@ -3,7 +3,7 @@
 	margin: 0;
 }
 body{
-	background: rgb(0, 0, 0);
+	background: url(bg_img.jpeg) no-repeat;
 	background-size: cover;
 	align-items: center;
 	justify-content: center;
@@ -23,7 +23,7 @@ body{
 	border-radius: 10px;
 }
 .label{
-	border: 2px solid #f0f0f0;
+	border: 2px solid #f7f7f7;
 	border-radius: 10px;
 	display: block;
 	font-family: inherit;
@@ -49,6 +49,7 @@ body{
 	font-size: 16px;
 	outline: none;
 	border: 1px solid silver;
+	border-radius: 10px;
 }
 .login_form .font2{
 	margin-top: 30px;
